refactor: rename id to strategy id to make it more clear
